# myClayoutTesting

./: CMakeLists.txt  clay-video-demo.c  explained.c  guidnbatter.db  instructions.md  projectDefine.md  sdl_3_clay_demo_annotated.md
SDL3/: clay_renderer_SDL3.c
python/: convert.py  monsters.csv  monstersnoheader.csv
src/: clay.h  db_query.c  db_query.h  global.c  global.h  main.c  main_window.c  styles.c  styles.h
